deploy + pag inicio

--- a/src/app/core/pages/home/home.page.html
+++ b/src/app/core/pages/home/home.page.html
@@ -1,5 +1,18 @@
 <div class="main centrado">
     <div class="row container">
+        <div class="card mb-3">
+            <img src="https://scontent.feze13-1.fna.fbcdn.net/v/t1.6435-9/71754522_1382705605213929_3864217604180672512_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=25d718&_nc_ohc=DiIn8_nuQhsQ7kNvgFXQy8d&_nc_ht=scontent.feze13-1.fna&oh=00_AYA4gfgx9xb0_6ccuzM8cSxT8mhtSAKZEBc444JixvRHxw&oe=66C03433"
+                alt="jobIT - Imagen" style="height: 25rem;">
+            <div class="card-body">
+                <h5 class="card-title">¡Bienvenido a Job IT!</h5>
+                <p class="card-text">En Job IT, conectamos talento con oportunidades en el sector de las tecnologías. Ya
+                    seas un profesional en busca de empleo o una empresa en busca del candidato perfecto, nuestra
+                    plataforma especializada te facilita encontrar lo que necesitas de manera rápida y eficiente. ¡Únete
+                    a nosotros y lleva tu carrera o tu equipo al siguiente nivel!</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago - V1.1</small>
+                </p>
+            </div>
+        </div>
         @for (card of cards; track card.id; let idx = $index, par = $even) {
         <div class="col col-12">
             <div class="container py-5">
