--- a/src/app/admins/pages/panel-de-control/panel-de-control.page.html
+++ b/src/app/admins/pages/panel-de-control/panel-de-control.page.html
@@ -50,45 +50,64 @@
             <div class="card">
                 <div class="card-body">
 
-                    <h2 class="text-info">Mis suscripciones</h2>
+                    <h2 class="text-info">Usuarios</h2>
                     <div class="table-responsive">
                         <table class="table text-center">
                             <thead>
                                 <tr>
                                     <th>
-                                        <i class="bi bi-calendar-event"></i>
-                                        xxxx
+                                        <i class="bi bi-person"></i>
+                                        Nombre
                                     </th>
                                     <th>
-                                        <i class="bi bi-calendar-event"></i>
-                                        xxxx
+                                        <i class="bi bi-envelope"></i>
+                                        Correo
                                     </th>
                                     <th>
-                                        <i class="bi bi-card-checklist"></i>
-                                        xxxx
+                                        <i class="bi bi-credit-card"></i>
+                                        Dni/Cuit
                                     </th>
                                     <th>
-                                        <i class="bi bi-card-checklist"></i>
-                                        xxxx
+                                        <i class="bi bi-telephone"></i>
+                                        Teléfono
                                     </th>
                                     <th>
-                                        <i class="bi bi-card-checklist"></i>
-                                        xxxx
+                                        <i class="bi bi-geo-alt"></i>
+                                        Provincia
                                     </th>
                                     <th>
-                                        <i class="bi bi-card-checklist"></i>
-                                        xxxx
+                                        <i class="bi bi-people"></i>
+                                        Tipo
+                                    </th>
+                                    <th>
+                                        <i class="bi bi-eye"></i>
+                                        Ver detalle
                                     </th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- @for (suscripcion of pagos; track $index) {
-                                    <tr>
-                                        <td>{{ suscripcion.fecha | date: 'short' }}</td>
-                                        <td>{{ suscripcion.fechaFin | date: 'short' }}</td>
-                                        <td> {{suscripcion.descripcion}} </td>
-                                    </tr>
-                                    } -->
+                                @for (user of usuarios; track $index) {
+                                @if (user.tipo != ETipoDeUsuario.admin ) {
+                                <tr>
+
+                                    <td>{{ user.nombre?user.nombre:"No lo ingreso" }}</td>
+                                    <td>{{ user.correo }}</td>
+                                    @if (user.tipo==ETipoDeUsuario.empresa) {
+                                    <td>{{ user.cuit?user.cuit:"No lo ingreso" }}</td>
+                                    }@else if (user.tipo==ETipoDeUsuario.empleado) {
+                                    <td>{{ user.dni?user.dni:"No lo ingreso" }}</td>
+                                    }
+                                    <td>{{ user.telefono?user.telefono:"No lo ingreso" }}</td>
+                                    <td>{{ user.provincia?user.provincia:"No la ingreso" }}</td>
+                                    <td>{{ user.tipo}}</td>
+                                    <td>
+                                        <button type="button" class="btn btn-outline-success mx-2">
+                                            <i class="bi bi-eye"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                }
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -99,8 +118,39 @@
         <div class="col-md-3 mb-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="text-info">Últimos ingresantes a la página</h5>
-                    <!-- Aquí irá la lista de últimos ingresantes -->
+                    <h5 class="text-info">Últimos ingresantes</h5>
+                    <div class="table-responsive">
+                        <table class="table text-center">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        <i class="bi bi-person"></i>
+                                        Nombre
+                                    </th>
+                                    <th>
+                                        <i class="bi bi-credit-card"></i>
+                                        Dni/Cuit
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @for (user of usuarios; track $index) {
+                                @if (user.tipo != ETipoDeUsuario.admin ) {
+                                <tr>
+
+                                    <td>{{ user.nombre?user.nombre:"No lo ingreso" }}</td>
+                                    <!-- <td>{{ user.correo }}</td> -->
+                                    @if (user.tipo==ETipoDeUsuario.empresa) {
+                                    <td>{{ user.cuit?user.cuit:"No lo ingreso" }}</td>
+                                    }@else if (user.tipo==ETipoDeUsuario.empleado) {
+                                    <td>{{ user.dni?user.dni:"No lo ingreso" }}</td>
+                                    }
+                                </tr>
+                                }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
