--- a/src/app/admins/pages/panel-de-control/panel-de-control.page.html
+++ b/src/app/admins/pages/panel-de-control/panel-de-control.page.html
@@ -38,7 +38,7 @@
                 <div class="card-body d-flex align-items-center">
                     <i class="bi bi-cash-coin text-success icono"></i>
                     <div class="ml-3">
-                        <h2 class="text-success mb-0">{{ dineroGanado }}</h2>
+                        <h2 class="text-success mb-0">${{ dineroGanado }}</h2>
                         <p class="text-muted">Dinero ganado</p>
                     </div>
                 </div>
