--- a/src/app/admins/pages/panel-de-control/panel-de-control.page.html
+++ b/src/app/admins/pages/panel-de-control/panel-de-control.page.html
@@ -1,39 +1,61 @@
 <div class="container mt-4">
     <div class="row">
-        <div class="col-md-3 mb-3">
+        <div class="col-md-2 mb-3">
             <div class="card  shadow-sm">
                 <div class="card-body d-flex align-items-center">
-                    <i class="bi bi-bar-chart-fill text-danger icono"></i>
+                    <i class="bi bi-bar-chart-fill icono" style="color: aquamarine;"></i>
                     <div class="ml-3">
-                        <h2 class="text-danger mb-0">{{ visitasPagina }}</h2>
+                        <h2 class="mb-0" style="color: aquamarine;">{{ visitasPagina }}</h2>
                         <p class="text-muted">Visitas en la página</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-md-2 mb-3">
+            <div class="card shadow-sm">
+                <div class="card-body d-flex align-items-center">
+                    <i class="bi bi-file-text icono" style="color: khaki;"></i>
+                    <div class="ml-3">
+                        <h2 class="mb-0" style="color: khaki;">{{ countPublicaciones }}</h2>
+                        <p class="text-muted">Publicaciones totales</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
             <div class="card shadow-sm">
                 <div class="card-body d-flex align-items-center">
                     <i class="bi bi-pencil-square text-primary icono"></i>
                     <div class="ml-3">
-                        <h2 class="text-primary mb-0">{{ publicacionesActivas }}</h2>
+                        <h2 class="text-primary mb-0">{{ countPublicacionesActivas }}</h2>
                         <p class="text-muted">Publicaciones activas</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-md-2 mb-3">
             <div class="card shadow-sm">
                 <div class="card-body d-flex align-items-center">
                     <i class="bi bi-pause-circle-fill text-warning icono"></i>
                     <div class="ml-3">
-                        <h2 class="text-warning mb-0">{{ publicacionesPausadas }}</h2>
+                        <h2 class="text-warning mb-0">{{ countPublicacionesPausadas }}</h2>
                         <p class="text-muted">Publicaciones pausadas</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-md-2 mb-3">
+            <div class="card shadow-sm">
+                <div class="card-body d-flex align-items-center">
+                    <i class="bi bi-ban text-danger icono"></i>
+                    <div class="ml-3">
+                        <h2 class="text-danger mb-0">{{ countPublicacionesFinalizadas }}</h2>
+                        <p class="text-muted">Publicaciones finalizadas</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
             <div class="card  shadow-sm">
                 <div class="card-body d-flex align-items-center">
                     <i class="bi bi-cash-coin text-success icono"></i>
@@ -46,7 +68,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-9 mb-3">
+        <div class="col-md-10 mb-3">
             <div class="card">
                 <div class="card-body">
 
@@ -115,39 +137,35 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-md-2 mb-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="text-info">Últimos ingresantes</h5>
+                    <h5 class="text-info">Últimos ingresos</h5>
                     <div class="table-responsive">
                         <table class="table text-center">
                             <thead>
                                 <tr>
                                     <th>
-                                        <i class="bi bi-person"></i>
-                                        Nombre
+
+                                        Precio
                                     </th>
                                     <th>
-                                        <i class="bi bi-credit-card"></i>
-                                        Dni/Cuit
+
+                                        Fecha
                                     </th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @for (user of usuarios; track $index) {
-                                @if (user.tipo != ETipoDeUsuario.admin ) {
+                                @for (pago of pagos; track $index) {
+
                                 <tr>
 
-                                    <td>{{ user.nombre?user.nombre:"No lo ingreso" }}</td>
-                                    <!-- <td>{{ user.correo }}</td> -->
-                                    @if (user.tipo==ETipoDeUsuario.empresa) {
-                                    <td>{{ user.cuit?user.cuit:"No lo ingreso" }}</td>
-                                    }@else if (user.tipo==ETipoDeUsuario.empleado) {
-                                    <td>{{ user.dni?user.dni:"No lo ingreso" }}</td>
-                                    }
+                                    <td>${{ pago.precio }}</td>
+                                    <td>{{ pago.fecha.toLocaleDateString()}}</td>
+
                                 </tr>
                                 }
-                                }
+
                             </tbody>
                         </table>
                     </div>
