--- a/src/app/admins/pages/panel-de-control/panel-de-control.page.scss
+++ b/src/app/admins/pages/panel-de-control/panel-de-control.page.scss
@@ -28,6 +28,9 @@
       margin-bottom: 0;
       color: #bbb; /* Texto secundario en gris claro */
     }
+    .card-body i {
+        padding-bottom: 1.4rem;
+      }
     
     
     
