modal cambio minimo

--- a/src/app/admins/pages/panel-de-control/panel-de-control.page.html
+++ b/src/app/admins/pages/panel-de-control/panel-de-control.page.html
@@ -196,7 +196,7 @@
             <p><strong>Veces que Ingresó:</strong> {{ selectedUser?.vecesQueIngreso }}</p>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-outline-secondary" (click)="modal.close()">Cerrar</button>
+            <button type="button" class="btn btn-outline-primary" (click)="modal.close()">Cerrar</button>
         </div>
     </ng-template>
 
