--- a/src/app/core/pages/home/home.page.html
+++ b/src/app/core/pages/home/home.page.html
@@ -71,7 +71,7 @@
                         alt="Technology Office" class="d-block w-100">
                     <div class="container">
                         <div class="carousel-caption text-start text-info">
-                            <h1>Encuentra tu próximo trabajo en tecnología.</h1>
+                            <h1>Encuentraaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa tu próximo trabajo en tecnología.</h1>
                             <p>Explora oportunidades en front-end, back-end, mobile y más.</p>
                             <p><a [routerLink]="'/auth/registrarse' | rutaValida"
                                     class="btn btn-lg btn-primary">Regístrate hoy</a></p>
